# firefox_session_data

./: .gitignore  .goreleaser.yaml  .typos.toml  Cargo.toml  Readme.md  deno_wasi_snapshot_preview1.mod.ts  deno_wasi_snapshot_preview1.runner.ts  deno_wasi_snapshot_preview1.ts  deno_wasi_snapshot_preview2.runner.ts
.cargo/: config.toml
.github/workflows/: docs.yml  release.yml
crates/firefox_compression/: Cargo.toml
crates/firefox_compression/src/: lib.rs  node_lz4_port.rs  tests.rs
crates/firefox_compression/src/expected/: sessionstore.json  sessionstore.jsonlz4
crates/firefox_session_data/: Cargo.toml
crates/firefox_session_data/src/: find.rs  io_utils.rs  lib.rs  main.rs  pdf_converter.rs  shared_opts.rs  to_links.rs  typst_world.rs
crates/firefox_session_store/: Cargo.toml
crates/firefox_session_store/src/: group_tab.rs  lib.rs  serde_as_json_str.rs  serde_as_str.rs  session_info.rs  to_links.rs
crates/json_statistics/: Cargo.toml
crates/json_statistics/src/: lib.rs  print.rs  type_script.rs
src-deno/: tui-denoland.ts  tui-ink.tsx  tui-jsr.ts  utils.ts  wasi-snapshot-preview1.mod.ts  wasi-snapshot-preview1.runner.ts  wasi-snapshot-preview2.runner.ts
src-deno/tui-ink/: components.tsx  console-size.tsx  deps.ts  eager-permissions.ts  mouse.ts  overlay.tsx  patch-stdio.ts  position.ts  secondary-buffer.ts  wrap-text.ts
src-deno/tui-ink/mouse/: constants.ts  context.tsx  parser.test.ts  parser.ts
src-deno/tui-ink/worker/: background-bundled.js  background.ts  client.ts  common.ts
