[package]
name = "firefox_compression"
version.workspace = true
authors.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"

[features]
default = []

compression_all = [
    "compression_compress",
    "compression_lz4",
    "compression_lz4_compression",
    "compression_lz4_compress",
    "compression_lz4_flex",
]

compression_compress = ["dep:compress", "compression"]
compression_lz4 = ["dep:lz4", "compression"]
compression_lz4_compression = ["dep:lz4-compression", "compression"]
compression_lz4_compress = ["dep:lz4-compress", "compression"]
compression_lz4_flex = ["dep:lz4_flex", "compression"]
compression = ["byteorder"]

[dependencies]
byteorder = { optional = true, version = "1.3.4" }

# Compression libraries
compress = { optional = true, version = "0.2.1" }
lz4-compression = { optional = true, version = "0.7.0" }
lz4-compress = { optional = true, version = "0.1.1" }
lz4_flex = { optional = true, version = "0.9.3" }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
lz4 = { optional = true, version = "1.23.2" }
