[package]
name = "firefox_session_store"
version.workspace = true
authors.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"
repository.workspace = true
description = """
Serde definitions for Firefox "sessionstore" data, that contains info about all currently open Firefox windows (and recently closed ones).
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

view = ["dep:serde_unstructured"]

[dependencies]
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
either = "1.6.0"

serde_unstructured = { git = "https://github.com/Lej77/serde_unstructured.git", tag = "v0.1.0", optional = true }
